# TrayMe

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  MOUSE_GESTURE.md  PERFORMANCE.md  README_NEW.md  Readme.md  TO-DO.md  index.html  package-lock.json  package.json  vite.config.ts
TrayMe/: BUILD_GUIDE.md  ContentView.swift  FILE_TREE.md  Info.plist  PROJECT_STRUCTURE.md  QUICKSTART.md  Readme.md  SUMMARY.md  TrayMe.entitlements  TrayMeApp.swift  UI_DESIGN.md  setup.sh
TrayMe.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  TrayMe.Windows.csproj
TrayMe.Windows/Managers/: AppSettings.cs  ClipboardManager.cs  FilesManager.cs  NotesManager.cs
TrayMe.Windows/Models/: ClipboardItem.cs  FileItem.cs  Note.cs
TrayMe.Windows/Styles/: Styles.xaml
TrayMe.xcodeproj/: project.pbxproj
TrayMe/AI/: ContextAnalyzer.swift  (+3 more)
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PLUGIN_GUIDE.md  README.md
rag_system/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  __init__.py  examples.py  requirements.txt  setup.sh  validate.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  create_icons.py  icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: ai.rs  crypto.rs  mod.rs  storage.rs  window.rs
src-tauri/src/managers/: mod.rs  storage_manager.rs  window_manager.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: errors.rs  logger.rs
src-tauri/tests/: window_manager_tests.rs
tests/: README.md
(+75 files in other folders)
